# crescent-ext-kebabify

./: .gitignore  README.md  pyproject.toml
crescent/ext/kebab/: __init__.py
tests/: test_kebab.py
