[tool.poetry]
authors = ["Lunarmagpie <Bambolambo0@gmail.com>"]
description = "Turn your command names into kebabs."
license = "MPL-2.0"
name = "crescent-ext-kebabify"
packages = [
  {include = "crescent/ext/kebab"},
]
readme = "README.md"
repository = "https://github.com/Lunarmagpie/crescent-ext-kebabify"
version = "0.1.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Lunarmagpie/crescent-ext-kebabify/issues"

[tool.poetry.dependencies]
hikari-crescent = "^0.3.0"
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
pytest = "^7.1.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
